--- a/main.css
+++ b/main.css
@@ -2275,3 +2275,7 @@
 :root .guilds_a4d4d9 > ul {
     border-radius: var(--border-radius);
 }
+
+:root .scroller_fea3ef {
+    border-radius: var(--border-radius)
+}
