--- a/main.css
+++ b/main.css
@@ -2279,3 +2279,7 @@
 :root .scroller_fea3ef {
     border-radius: var(--border-radius)
 }
+
+:root .header_fd6364 {
+    border-radius: var(--border-radius)
+}
