--- a/main.css
+++ b/main.css
@@ -2283,3 +2283,7 @@
 :root .header_fd6364 {
     border-radius: var(--border-radius)
 }
+
+:root .panels_a4d4d9 {
+    border-radius: var(--border-radius)
+}
