--- a/main.css
+++ b/main.css
@@ -2287,3 +2287,7 @@
 :root .panels_a4d4d9 {
     border-radius: var(--border-radius)
 }
+
+:root .scroller_c43953 .thin_eed6a8 .scrollerBase_eed6a8 .fade_eed6a8 .customTheme_eed6a8 {
+    border-radius: var(--border-radius)
+}
