--- a/main.css
+++ b/main.css
@@ -2303,3 +2303,7 @@
 :root .container_ee69e0 {
     border-radius: var(--border-radius)
 }
+
+:root .sidebar_a4d4d9 {
+    border-radius: var(--border-radius)
+}
