--- a/main.css
+++ b/main.css
@@ -2307,3 +2307,7 @@
 :root .sidebar_a4d4d9 {
     border-radius: var(--border-radius)
 }
+
+:root .content_eed6a8 {
+    border-radius: var(--border-radius)
+}
