--- a/main.css
+++ b/main.css
@@ -2309,6 +2309,6 @@
 }
 
 :root .guilds_a4d4d9 {
-    border-top-left-radius: var(--border-radius);
-    border-bottom-left-radius: var(--border-radius);
+    border-top-left-radius: 20px
+    border-bottom-left-radius: 20px
 }
