--- a/main.css
+++ b/main.css
@@ -2313,6 +2313,16 @@
 }
 
 :root .guilds_a4d4d9 {
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+}
+
+:root .sidebar_c25c6d {
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+}
+
+:root .content_a4d4d9 {
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
 }
