--- a/main.css
+++ b/main.css
@@ -2294,7 +2294,7 @@
 
 :root .container_fd6364 .clickable_fd6364 {
     border-top-left-radius: 20px;
-    border-bottom-left-radius: 20px;)
+    border-bottom-left-radius: 20px;
 }
 
 :root .panel_bf1a22 activityPanel_a4d4d9 {
