--- a/main.css
+++ b/main.css
@@ -2304,7 +2304,7 @@
 
 :root .container_ee69e0 {
     border-top-left-radius: 20px;
-    border-bottom-left-radius: 20px;)
+    border-bottom-left-radius: 20px;
 }
 
 :root .sidebar_a4d4d9 {
