--- a/css/main.css
+++ b/css/main.css
@@ -59,7 +59,7 @@ body {
     margin-right: auto;
     margin-left: auto;
     display: flex;
-    position: relative;
+    position: fixed;
 }
 
 .nav_brand-link.w--current {
@@ -203,8 +203,8 @@ header, nav, section, footer {
     content: "";
     background: linear-gradient(
       45deg,
-      #FF0000, #FF7300, #FFFB00, #48FF00,
-      #00FFD5, #002BFF, #FF00C8, #FF0000
+      #0600C2, #3A31D8, #0600C2, #3A31D8,
+      #0600C2, #3A31D8, #0600C2, #3A31D8
     );
     position: absolute;
     top: -2px;
@@ -385,4 +385,48 @@ line-height: 1.5rem;
 .text-animation {
     opacity: 0; /* Initially hide the text */
     animation: textFadeIn 1s ease-in-out 2s forwards;
+
 }
+
+.container {
+position: relative;
+display: flex;
+justify-content: center;
+align-items: center;
+max-width: 1200px;
+flex-wrap: wrap;
+z-index: 1;
+}
+
+.container .card {
+    position: relative;
+    width: 280px;
+    height: 400px;
+    margin: 30px;
+    box-shadow: 20px 20px 50px rgba(0, 0, 0, 0 0.5);
+    border-radius: 15px;
+    background: rgba(255, 255, 255, 0.1);
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-top: 1px solid rgba(255, 255, 255 0.5);
+    border-left: 1px solid rgba(255, 255, 255 0.5);
+    backdrop-filter: blur(5px);
+}
+
+.container .card .content {
+    padding: 20px;
+    text-align: center;
+    transition: 0.5;
+}
+
+.container .card .content h2 {
+    position: absolute;
+    top: 10px;
+    right: 30px;
+    font-size: 5rem;
+    color: var(--text-color);
+    pointer-events: none;
+}
+
